docs/kubernetes/fluxcd/apps/overlays/production/dd-ui/postgres-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dd-ui-postgres
spec:
  template:
    spec:
      imagePullSecrets:
      - name: jcr-pcfae-dungeon-pull-secret
      containers:
      - name: postgres
        image: docker.jcr.pcfae.com/postgres:16-alpine
        volumeMounts:
        - name: hookshot-dd-ui-postgres-data
          mountPath: /var/lib/postgresql/data
          subPath: pgdata
  volumeClaimTemplates:
  - metadata:
      name: hookshot-dd-ui-postgres-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 10Gi
