docs/kubernetes/fluxcd/apps/overlays/production/dd-ui/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dd-ui-lb
  annotations:
    lbipam.cilium.io/ips: "172.22.30.8"
    lbipam.cilium.io/sharing-key: "hookshot"
spec:
  type: LoadBalancer
  selector:
    app: dd-ui
  ports:
  - name: https
    port: 8443
    targetPort: 443
    protocol: TCP
