docs/kubernetes/fluxcd/apps/overlays/production/dd-ui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dd-ui
spec:
  parentRefs:
  - name: xylem-gateway
    namespace: king-of-red-lions
  hostnames:
  - dd-ui.pcfae.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dd-ui
      port: 443
